# telepi

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/context/: api.md  architecture.md  conventions.md  deploy.md  modules.md  tech-stack.md
docs/remote/telepi/: agents.md
docs/remote/telepi/docs/context/: api.md  architecture.md  conventions.md  deploy.md  modules.md  tech-stack.md
docs/review/: api-design.md  architecture.md  code-quality.md  error-handling.md  infra.md  runtime-health.md  summary.md  testing.md
src/: cli.rs  config.rs  error.rs  format.rs  lib.rs  main.rs  paths.rs
src/bot/: handler.rs  keyboard.rs  mod.rs  prompt_inbox.rs  state.rs  transport.rs
src/bot/commands/: basic.rs  context.rs  mod.rs  model.rs  sessions.rs  tree.rs
src/install/: launchd.rs  mod.rs  platform.rs  systemd.rs
src/pi/: cli_session.rs  mod.rs  registry.rs  session.rs  tree.rs
src/voice/: mod.rs
