[package]
name = "telepi"
version = "0.1.0"
edition = "2024"
description = "Telegram bridge for the Pi coding agent — Rust implementation"
license = "MIT"
rust-version = "1.85"

[[bin]]
name = "telepi"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for OpenAI Whisper, etc.)
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Config
dotenvy = "0.15"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
which = "7"
glob = "0.3"
sha2 = "0.10"
base64 = "0.22"
dirs = "6"
libc = "0.2"
tokio-stream = "0.1"
async-trait = "0.1"
tracing-appender = "0.2"

[dev-dependencies]
tokio-test = "0.4"
